# de-zoomcamp

./: .gitignore  Makefile  README.md  pyproject.toml
src/homeworks/01-docker-terraform/: Dockerfile  docker-compose.yaml  ingest_data.py  readme.md
