[project]
name = "de-zoomcamp"
version = "0.1.0"
description = "Homework submissions of Data Engineering cohort 2026 of DataTalksClub."
authors = [
    {name = "Eveliina Vesala",email = "eveliina.ves@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
